--- a/hack-or-snooze-ajax-api/css/stories.css
+++ b/hack-or-snooze-ajax-api/css/stories.css
@@ -10,6 +10,13 @@
   margin: 10px 0;
 }
 
+#favorited-stories,
+#my-stories {
+  list-style: none;
+  padding-left: 20px;
+}
+
+
 #stories-loading-msg {
   font-weight: bold;
   font-size: 150%;
@@ -18,6 +25,17 @@
 
 
 /* Individual stories */
+
+.star,
+.trash-can {
+  font-size: 0.75rem;
+  margin: 0 5px;
+  cursor: pointer;
+}
+
+.trash-can:hover {
+  color: crimson;
+}
 
 .story-link {
   color: black;
@@ -32,8 +50,14 @@
 
 .story-author {
   margin-left: 2em;
+  font-size: 0.85rem;
+  color: green;
+  padding: 6px 0;
 }
 
 .story-user {
   display: block;
+  margin-left: 2em;
+  font-size: 0.85rem;
+  color: orange;
 }
