--- a/hack-or-snooze-ajax-api/css/stories.css
+++ b/hack-or-snooze-ajax-api/css/stories.css
@@ -8,6 +8,8 @@
   color: gray;
   font-size: 0.8rem;
   margin: 10px 0;
+  border-bottom: 1px solid #e5e5e5;
+  padding-bottom: 10px;
 }
 
 #favorited-stories,
